--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  
+<head>
+    <!-- Meta tags -->
+    <meta>
+    <meta>
+    <!-- Title - This displays in the browser's title bar tags -->
+    <title>Homepage</title>
+</head>
+<!-- Body section - Contains all the visable content of the pages-->
+<body>
+    <!-- Header block -->
+    <header>
+        <h1>Homepage</h1>
+        <!-- TODO this section will contain the logo-->
+        <div></div>
+    </header>
+    <!-- Navigation block -->
+    <nav>
+        <a href="">Home</a>
+    </nav>
+    <!-- Main Block contains the central content for this page -->
+    <main>
+        <section> <!-- subsection of main - TBD--> 
+            <p>TODO</p>
+            <article> 
+                <!-- placeholder for content - TBD-->
+            </article>
+        </section>
+        <section> 
+            <!-- subsection of main - TBD--> 
+        </section>
+    </main>
+    <!-- Footer secton -->
+    <footer> </footer>
+</body>
+</html>
